add layout e funcionalidades da paginação

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <!--Directives-->
     <script type="text/javascript" src="js/directives/pk-header.js"></script>
     <script type="text/javascript" src="js/directives/pk-card.js"></script>
+    <script type="text/javascript" src="js/directives/pk-pagination.js"></script>
 </head>
 
 <body>
