Adicionando validação de texto na busca por nome na página e criando diretiva responsável por exibição de mensagem em caso de resultado da busca ser vazio

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="js/directives/pk-header.js"></script>
     <script type="text/javascript" src="js/directives/pk-card.js"></script>
     <script type="text/javascript" src="js/directives/pk-pagination.js"></script>
+    <script type="text/javascript" src="js/directives/pk-not-found.js"></script>
 </head>
 
 <body>
