UPDATE URL of pokeapi because of an error on the api server side, add constants.js to infra to avoid some desnecessary $scope exposure of number of pagination per pages and for better maintainability (example: changing the api base url once, modify it everywhere) and fixing wrong message on the subtitle of notFount directive

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
     <!--Infra-->
     <script type="text/javascript" src="js/infra/app-routes.js"></script>
+    <script type="text/javascript" src="js/infra/constants.js"></script>
 
     <!--Services-->
     <script type="text/javascript" src="js/services/messages-service.js"></script>
